# b2c2-client

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
b2c2/: models.py  settings.py
b2c2/api_client/: api.py  errors.py  exceptions.py
b2c2/cli/: __init__.py  actions.py  apiclient.py  config.py  decorators.py  exceptions.py  interface.py  main.py  questions.py  tokens.py  utils.py  validators.py
b2c2/common/: constants.py  models.py  settings.py
b2c2/mockserver/: defaults.py  main.py  settings.py  utils.py
logs/: readme.md
requirements/: local.txt  production.txt
tests/: conftest.py
tests/api_client/: test_client.py  test_errors.py
tests/common/: test_models.py
tests/resources/api/: balance.json  instruments.json  order_details.json  order_history.json  request_for_quote.json  trade_details.json  trade_history.json
