[metadata]
name = b2c2_client
version = 0.0.1
description = B2C2 Python client and command line interface
long_description = file: README.md
keywords = b2c2, trading, exchange, finance, liquidity, provider
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
packages =
    b2c2.api_client
    b2c2.cli
    b2c2.common

install_requires =
    requests
    python-dotenv==0.19.1
    requests==2.26.0
    rich==10.12.0
    PyInquirer==1.0.3
    pydantic==1.8.2

[options.entry_points]
console_scripts =
    b2c2 = b2c2.cli.main:main

[flake8]
max-line-length = 88
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[pycodestyle]
max-line-length = 88
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[mypy]
python_version = 3.8
check_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
